# kgl

./: .clang-format  CMakeLists.txt  CellView.cpp  CellView.hpp  FieldView.cpp  FieldView.hpp  FieldViewMouseAdapter.cpp  FieldViewMouseAdapter.hpp  PrepareViews.cpp  PrepareViews.hpp  TimeController.cpp  TimeController.hpp  cell_view.cpp  cell_view.h  debug.cpp  field_view.cpp  field_view.h  format-all.sh  format-changed.sh  gen.sh  index_buffer.cpp  index_buffer.h  main.cpp  prepare_views.cpp  prepare_views.h  rc  renderer.cpp  renderer.h  shader.cpp  shader.h  stat.sh  storage.h  timer.cpp  uniform_location.cpp  uniform_location.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
cell-autom/: CMakeLists.txt  Cell.cpp  FieldModel.cpp  Rule.cpp  cell.h  cellindex.h  cells.h  field.cpp  field.h  field_model.cpp  field_model.h  header.h  rule.cpp  rule.h
cell-autom/include/cell-autom/: Cell.hpp  Cells.hpp  FieldModel.hpp  Rule.hpp
glw/: CMakeLists.txt  Debug.cpp  IndexBuffer.cpp  IndexBufferHandler.cpp  Renderer.cpp  Shader.cpp  UniformLocation.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferHandler.cpp  debug.cpp  index_buffer.cpp  index_buffer_handler.cpp  renderer.cpp  shader.cpp  uniform_location.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_handler.cpp
glw/include/glw/: Debug.hpp  IndexBuffer.hpp  IndexBufferHandler.hpp  Renderer.hpp  Shader.hpp  UniformLocation.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferHandler.hpp  VertexBufferLayout.hpp  debug.h  index_buffer.h  index_buffer_handler.h  renderer.h  shader.h  uniform_location.h  vertex_array.h  vertex_buffer.h  vertex_buffer_handler.h
res/shaders/: automata.shader  basic.shader
ui/: CMakeLists.txt  KeyboardListener.cpp  MouseListener.cpp  mouse.cpp  mouse_listener.cpp
ui/include/ui/: KeyboardListener.hpp  MouseListener.hpp  defs.hpp  mouse.h  mouse_listener.h
utils/: CMakeLists.txt  CellIndex.cpp  Color.cpp  Field.cpp  IndexIterator.cpp  IndexRange.cpp  Point.cpp  Rect.cpp  Timer.cpp  cell_index.cpp  cell_index.h  cell_index_iterator.cpp  cell_index_iterator.h  color.cpp  field.cpp  field.h  field.hpp  field_indices.cpp  field_indices.h  field_test.cpp  index_iterator.cpp  index_iterator.h  index_range.cpp  index_range.h  point.cpp  rect.cpp  timer.cpp
utils/include/utils/: CellIndex.hpp  Field.hpp  FieldBodies.hpp  IndexIterator.hpp  IndexRange.hpp  Point.hpp  Rect.hpp  SharedVariable.hpp  SizeInBytes.hpp  Timer.hpp  cell_index.h  color.h  field.h  field.hpp  index_iterator.h  index_range.h  point.h  rect.h  sharedvariable.h  size_in_bytes.h  timer.h
